golden/error/_import_cycle_c.rcl
import "_import_cycle_a.rcl"
